fix invisible seek buttons

--- a/webapp/src/app/components/audio-player/audio-player.component.scss
+++ b/webapp/src/app/components/audio-player/audio-player.component.scss
@@ -357,7 +357,7 @@ a {
     height: 8px;
     border-radius: 10px;
     margin: 4px 0;
-    cursor: ew-resize;
+    cursor: pointer;
     background-color: #4c4659;
   }
   .castos-player .progress__filled {
